Added basic input to database from user

--- a/SQL/views/index.html
+++ b/SQL/views/index.html
@@ -20,7 +20,12 @@
     </form>
 
     <button onclick="checkUser()">Check User</button>
-
+    <div class="insert_wrapper">
+        <div class="mainInsert">
+            <input type="text" id="Barcode" placeholder="Barcode">
+            <button onclick="check()">Enter Product</button>
+        </div>
+    </div>
     <div class="main_page">
         <div id="example-table"></div>
     </div>
