--- a/SQL/views/index.html
+++ b/SQL/views/index.html
@@ -18,12 +18,13 @@
             <button id="sign-out">Sign Out</button>
         </div>
     </form>
-
     <button onclick="checkUser()">Check User</button>
     <div class="insert_wrapper">
         <div class="mainInsert">
             <input type="text" id="Barcode" placeholder="Barcode">
-            <button onclick="check()">Enter Product</button>
+            <input id="name" placeholder="Name" disabled="true">
+            <input id="price" placeholder="Price" disabled="true">
+            <button onclick="check()">Enter Record</button>
         </div>
     </div>
     <div class="main_page">
